force-app/main/default/objects/ProductRequired/fields/CoIT_New_Quantity_Required__c.field-meta.xml
<CustomField>
    <fullName>CoIT_New_Quantity_Required__c</fullName>
    <label>Nueva Cantidad Requerida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>