force-app/main/default/objects/ProductRequired/fields/CoIT_Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Precio_Total__c</fullName>
    <formula>CoIT_Precio_Unitario__c  *  QuantityRequired</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>