force-app/main/default/objects/ProductRequired/fields/CoIT_Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Precio_Unitario__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio Unitario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>