force-app/main/default/objects/ProductRequired/fields/CoIT_Quantity_Affected__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Quantity_Affected__c</fullName>
    <label>Quantity Affected</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>