force-app/main/default/objects/ProductRequired/fields/CoIT_Zone__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zona</label>
    <referenceTo>CoIT_Zone__c</referenceTo>
    <relationshipLabel>Products Required</relationshipLabel>
    <relationshipName>Products_Required</relationshipName>
    <type>Lookup</type>
</CustomField>